Add support for latest API changes